<resources>
    <string name="app_name">AppointmentBook</string>
    <string name="action_readme">README</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings for Main -->
    <string name="create_apptbook">Create AppointmentBook</string>
    <string name="add_appt">Add Appointment</string>
    <string name="view_all">View All Appointments</string>
    <string name="search_appts">Search Appointments</string>

    <!-- Strings for AddAppt -->
    <string name="description">Description:</string>
    <string name="start_date_time">Start Date and Time: </string>
    <string name="end_date_time">End Date and Time:</string>
    <string name="description_ex">ex: Learning Java</string>
    <string name="date_ex">ex: 08/11/2021</string>
    <string name="time_ex">ex: 05:30</string>
    <string name="marker_ex">am/pm</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="hint_err"><font size='5pt'></font></string>

    <!-- Strings used throughout -->
    <string name="return_button">Return</string>

    <string name="start_date">Enter Start Date</string>
    <string name="start_time">Enter Start Time</string>
    <string name="end_date">Enter End Date</string>
    <string name="end_time">Enter End Time</string>
    <string name="search_text">Search</string>

</resources>