<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/main_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Owner Name:"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="8pt"
            android:inputType="none"/>

        <EditText
            android:id="@+id/owner_input"
            android:layout_width="100pt"
            android:layout_height="20pt"
            android:layout_margin="5pt"
            android:textSize="7pt"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:autofillHints="name"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="176dp" />

        <Button
            android:id="@+id/create_apptbook"
            android:layout_width="100pt"
            android:layout_height="30pt"
            android:layout_margin="5pt"
            android:text="@string/create_apptbook"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="176dp" />

        <Button
            android:id="@+id/add_appt"
            android:layout_width="100pt"
            android:layout_height="30pt"
            android:layout_margin="5pt"
            android:text="@string/add_appt"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="176dp"/>

        <Button
            android:id="@+id/view_all"
            android:layout_width="100pt"
            android:layout_height="30pt"
            android:layout_margin="5pt"
            android:text="@string/view_all"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="176dp" />

        <Button
            android:id="@+id/search"
            android:layout_width="100pt"
            android:layout_height="30pt"
            android:layout_margin="5pt"
            android:text="@string/search_appts"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="176dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

