<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/search_title"
        android:layout_width="165pt"
        android:layout_height="30pt"
        android:layout_margin="5pt"
        android:textSize="10pt"
        android:textColor="@color/black"
        android:textFontWeight="5"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/search_appts"/>

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="45pt"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/layout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <Button
                android:id="@+id/select_start_date"
                android:layout_width="75pt"
                android:layout_height="48dp"
                android:layout_margin="5pt"
                android:layout_marginTop="15pt"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/start_date" />

            <TextView
                android:id="@+id/set_start_date"
                android:layout_width="50pt"
                android:layout_height="20pt"
                android:layout_margin="5pt"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="10dp" />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="45pt"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintBottom_toTopOf="@id/layout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout2">

        <Button
            android:id="@+id/select_start_time"
            android:layout_width="75pt"
            android:layout_height="48dp"
            android:layout_margin="5pt"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/start_time" />

        <TextView
            android:id="@+id/set_start_time"
            android:layout_width="50pt"
            android:layout_height="20pt"
            android:layout_margin="5pt"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:padding="10dp" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="wrap_content"
            android:layout_height="45pt"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/layout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout3"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <Button
                android:id="@+id/select_end_date"
                android:layout_width="75pt"
                android:layout_height="48dp"
                android:layout_margin="5pt"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/end_date" />

            <TextView
                android:id="@+id/set_end_date"
                android:layout_width="50pt"
                android:layout_height="20pt"
                android:layout_margin="5pt"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="wrap_content"
            android:layout_height="45pt"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            app:layout_constraintBottom_toTopOf="@id/search_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout4">

            <Button
                android:id="@+id/select_end_time"
                android:layout_width="75pt"
                android:layout_height="48dp"
                android:layout_margin="5pt"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/end_time" />

        <TextView
            android:id="@+id/set_end_time"
            android:layout_width="50pt"
            android:layout_height="20pt"
            android:layout_margin="5pt"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:padding="10dp" />


    </LinearLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="50pt"
            android:layout_height="48dp"
            android:layout_margin="5pt"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/search_text" />


        <TextView
            android:id="@+id/search_appts"
            android:layout_width="175pt"
            android:layout_height="wrap_content"
            android:layout_margin="5pt"
            android:layout_weight="3"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_button"/>


    </LinearLayout>


</ScrollView>